--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,17 @@
     <name>inbank</name>
     <description>inbank</description>
     <properties>
-        <java.version>20</java.version>
+        <java.version>19</java.version>
         <kotlin.version>1.8.22</kotlin.version>
     </properties>
     <dependencies>
         <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,12 +41,6 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -86,5 +84,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
